force-app/main/default/objects/animalos__Job_Status_Tracking__c/animalos__Job_Status_Tracking__c.object-meta.xml
<CustomObject>
    <label>Job Status Tracking</label>
    <nameField>
        <displayFormat>JST{0000000}</displayFormat>
        <label>Job Status Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Status Tracking Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>