force-app/main/default/objects/animalos__Job_Status_Tracking__c/fields/animalos__Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Awaiting Recheck</fullName>
            </value>
            <value>
                <fullName>Pending Prosecution</fullName>
            </value>
            <value>
                <fullName>Awaiting Notification Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Further Information</fullName>
            </value>
            <value>
                <fullName>Formal Caution</fullName>
            </value>
            <value>
                <fullName>Penalty Infringement Notice</fullName>
            </value>
            <value>
                <fullName>Prosecution/CAN</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Animal Welfare League</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Other Agency</fullName>
            </value>
            <value>
                <fullName>Intel Only</fullName>
            </value>
            <value>
                <fullName>Contact Details</fullName>
            </value>
            <value>
                <fullName>Person Responsible</fullName>
            </value>
            <value>
                <fullName>Condition of Animals Reported</fullName>
            </value>
            <value>
                <fullName>Evidence</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Working/Assigned</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Job Raised</fullName>
            </value>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>